--- a/ValheimBot/Properties/launchSettings.json
+++ b/ValheimBot/Properties/launchSettings.json
@@ -12,9 +12,10 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7133;http://localhost:5213",
+      "applicationUrl": "https://localhost:7133;http://0.0.0.0:5213",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "TELEGRAM_TOKEN": "5618608180:AAH_TtxBREdxFsJLTR0r7cvTfo1gS2fqqm8"
       }
     },
     "IIS Express": {
