--- a/ValheimBot/ValheimBot.csproj
+++ b/ValheimBot/ValheimBot.csproj
@@ -8,6 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.101.5" />
+      <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.2" />
       <PackageReference Include="Telegram.Bot" Version="19.0.0-preview.1" />
       <PackageReference Include="Telegram.Bots.Extensions.AspNetCore" Version="5.9.0" />
     </ItemGroup>
