--- a/ValheimBot/ValheimBot.csproj
+++ b/ValheimBot/ValheimBot.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="Telegram.Bots.Extensions.AspNetCore" Version="5.9.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Common\Common.csproj" />
+    </ItemGroup>
+
 </Project>
